tests/expectations/compiler/examples/vote.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:25
     |
  40 |         let id: field = BHP256::hash_to_field(info.title);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
